demos/kubernetes/node-demo/prod/service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app: devops-demo
    environment: prod
  name: devops-demo
spec: 
  ports: 
    - 
      name: nodejs
      port: 3000
      targetPort: 3000
  selector: 
    app: devops-demo
    environment: prod
  type: ClusterIP
